--- a/sf-es5/index.html
+++ b/sf-es5/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <input type="text" sf-value="vm.message">
-    <p sf-innertext="vm.message"></p>
+    <p sf-bind="vm.message"></p>
 </body>
 </html>
