change viewModel by click event

--- a/sf-es5/index.html
+++ b/sf-es5/index.html
@@ -9,5 +9,6 @@
 <body>
     <input type="text" sf-value="vm.message">
     <p sf-bind="vm.message"></p>
+    <button onclick="vm.clickHandler();">click me</button>
 </body>
 </html>
